RESOLVED FIXED106052
[WK2] [Gtk] crash when web inspector is attached, and window height is reduced.
https://bugs.webkit.org/show_bug.cgi?id=106052
Summary [WK2] [Gtk] crash when web inspector is attached, and window height is reduced.
arno.
Reported 2013-01-03 15:26:20 PST
Hi, I display web inspector in MiniBrowser (this requires patch from #106050), attached to the webview. Then I reduce window size. When height is small enough, main view height reaches 0, and the browser crashes. It crashes from a x11 error in RedirectedXCompositeWindow::resize because size.height() is <= 0
Attachments
patch proposal: detach inspector when webViewBase height becomes too small (2.58 KB, patch)
2013-01-03 15:29 PST, arno.
no flags
patch proposal: updated patch: wrong static_cast (2.58 KB, patch)
2013-01-03 15:51 PST, arno.
cgarcia: review-
A different approach (2.13 KB, patch)
2013-01-04 06:39 PST, Carlos Garcia Campos
mrobinson: review+
arno.
Comment 1 2013-01-03 15:29:02 PST
Created attachment 181234 [details] patch proposal: detach inspector when webViewBase height becomes too small
WebKit Review Bot
Comment 2 2013-01-03 15:33:46 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Martin Robinson
Comment 3 2013-01-03 15:41:07 PST
Comment on attachment 181234 [details] patch proposal: detach inspector when webViewBase height becomes too small Seems that it would be a bit jarring to turn off the inspector completely if you shrank the window and then made it larger again. Why not just hide the inspector if there isn't enough space?
arno.
Comment 4 2013-01-03 15:51:53 PST
Created attachment 181242 [details] patch proposal: updated patch: wrong static_cast
Carlos Garcia Campos
Comment 5 2013-01-04 06:36:25 PST
Comment on attachment 181242 [details] patch proposal: updated patch: wrong static_cast I don't think detaching the inspector is the right fix, here. There are actually two bugs, we shouldn't allocate for the children a size bigger than the parent, and we should make sure the widget allocation is always >= 1 (which is what GTK does in gtk_widget_size_allocate())
Carlos Garcia Campos
Comment 6 2013-01-04 06:39:21 PST
Created attachment 181299 [details] A different approach
Carlos Garcia Campos
Comment 7 2013-01-04 09:15:42 PST
Note You need to log in before you can comment on or make changes to this bug.