[WK2] [Gtk] crash when web inspector is attached, and window height is reduced. https://bugs.webkit.org/show_bug.cgi?id=106052

Reviewed by Martin Robinson.

Do not allocate more size for the inspector view than its parent
size. Also make sure that the view size is always at least 1.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(resizeWebKitWebViewBaseFromAllocation):

Canonical link: https://commits.webkit.org/124278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138803 268f45cc-cd09-0410-ab3c-d52691b4dbfc